parser.output
   0  $accept : %entry% $end

   1  program : opt_cmd_seq

   2  opt_cmd_seq :
   3              | cmd_seq

   4  cmd_seq : cmd
   5          | cmd_seq cmd

   6  cmd : FORWARD expr
   7      | RIGHT expr
   8      | LEFT expr
   9      | HOME
  10      | MAKE NAME expr
  11      | BACKWARD expr
  12      | PRINT expr
  13      | PRINTS

  14  expr : expr PLUS term
  15       | expr MINUS term
  16       | term

  17  term : term TIMES factor
  18       | term DIVIDE factor
  19       | term MOD factor
  20       | factor

  21  factor : final POWER factor
  22         | final

  23  final : INT
  24        | REF
  25        | LPAR expr RPAR

  26  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (26)
	opt_cmd_seq : .  (2)

	FORWARD  shift 3
	LEFT  shift 4
	HOME  shift 5
	PRINT  shift 6
	RIGHT  shift 7
	BACKWARD  shift 8
	MAKE  shift 9
	PRINTS  shift 10
	$end  reduce 2

	program  goto 11
	opt_cmd_seq  goto 12
	cmd_seq  goto 13
	cmd  goto 14


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	cmd : FORWARD . expr  (6)

	LPAR  shift 15
	INT  shift 16
	REF  shift 17
	.  error

	expr  goto 18
	term  goto 19
	factor  goto 20
	final  goto 21


state 4
	cmd : LEFT . expr  (8)

	LPAR  shift 15
	INT  shift 16
	REF  shift 17
	.  error

	expr  goto 22
	term  goto 19
	factor  goto 20
	final  goto 21


state 5
	cmd : HOME .  (9)

	.  reduce 9


state 6
	cmd : PRINT . expr  (12)

	LPAR  shift 15
	INT  shift 16
	REF  shift 17
	.  error

	expr  goto 23
	term  goto 19
	factor  goto 20
	final  goto 21


state 7
	cmd : RIGHT . expr  (7)

	LPAR  shift 15
	INT  shift 16
	REF  shift 17
	.  error

	expr  goto 24
	term  goto 19
	factor  goto 20
	final  goto 21


state 8
	cmd : BACKWARD . expr  (11)

	LPAR  shift 15
	INT  shift 16
	REF  shift 17
	.  error

	expr  goto 25
	term  goto 19
	factor  goto 20
	final  goto 21


state 9
	cmd : MAKE . NAME expr  (10)

	NAME  shift 26
	.  error


state 10
	cmd : PRINTS .  (13)

	.  reduce 13


state 11
	%entry% : '\001' program .  (26)

	.  reduce 26


state 12
	program : opt_cmd_seq .  (1)

	.  reduce 1


state 13
	opt_cmd_seq : cmd_seq .  (3)
	cmd_seq : cmd_seq . cmd  (5)

	FORWARD  shift 3
	LEFT  shift 4
	HOME  shift 5
	PRINT  shift 6
	RIGHT  shift 7
	BACKWARD  shift 8
	MAKE  shift 9
	PRINTS  shift 10
	$end  reduce 3

	cmd  goto 27


state 14
	cmd_seq : cmd .  (4)

	.  reduce 4


state 15
	final : LPAR . expr RPAR  (25)

	LPAR  shift 15
	INT  shift 16
	REF  shift 17
	.  error

	expr  goto 28
	term  goto 19
	factor  goto 20
	final  goto 21


state 16
	final : INT .  (23)

	.  reduce 23


state 17
	final : REF .  (24)

	.  reduce 24


state 18
	cmd : FORWARD expr .  (6)
	expr : expr . PLUS term  (14)
	expr : expr . MINUS term  (15)

	PLUS  shift 29
	MINUS  shift 30
	$end  reduce 6
	FORWARD  reduce 6
	LEFT  reduce 6
	HOME  reduce 6
	PRINT  reduce 6
	RIGHT  reduce 6
	BACKWARD  reduce 6
	MAKE  reduce 6
	PRINTS  reduce 6


state 19
	expr : term .  (16)
	term : term . TIMES factor  (17)
	term : term . DIVIDE factor  (18)
	term : term . MOD factor  (19)

	TIMES  shift 31
	DIVIDE  shift 32
	MOD  shift 33
	$end  reduce 16
	PLUS  reduce 16
	MINUS  reduce 16
	RPAR  reduce 16
	FORWARD  reduce 16
	LEFT  reduce 16
	HOME  reduce 16
	PRINT  reduce 16
	RIGHT  reduce 16
	BACKWARD  reduce 16
	MAKE  reduce 16
	PRINTS  reduce 16


state 20
	term : factor .  (20)

	.  reduce 20


state 21
	factor : final . POWER factor  (21)
	factor : final .  (22)

	POWER  shift 34
	$end  reduce 22
	PLUS  reduce 22
	MINUS  reduce 22
	TIMES  reduce 22
	DIVIDE  reduce 22
	MOD  reduce 22
	RPAR  reduce 22
	FORWARD  reduce 22
	LEFT  reduce 22
	HOME  reduce 22
	PRINT  reduce 22
	RIGHT  reduce 22
	BACKWARD  reduce 22
	MAKE  reduce 22
	PRINTS  reduce 22


state 22
	cmd : LEFT expr .  (8)
	expr : expr . PLUS term  (14)
	expr : expr . MINUS term  (15)

	PLUS  shift 29
	MINUS  shift 30
	$end  reduce 8
	FORWARD  reduce 8
	LEFT  reduce 8
	HOME  reduce 8
	PRINT  reduce 8
	RIGHT  reduce 8
	BACKWARD  reduce 8
	MAKE  reduce 8
	PRINTS  reduce 8


state 23
	cmd : PRINT expr .  (12)
	expr : expr . PLUS term  (14)
	expr : expr . MINUS term  (15)

	PLUS  shift 29
	MINUS  shift 30
	$end  reduce 12
	FORWARD  reduce 12
	LEFT  reduce 12
	HOME  reduce 12
	PRINT  reduce 12
	RIGHT  reduce 12
	BACKWARD  reduce 12
	MAKE  reduce 12
	PRINTS  reduce 12


state 24
	cmd : RIGHT expr .  (7)
	expr : expr . PLUS term  (14)
	expr : expr . MINUS term  (15)

	PLUS  shift 29
	MINUS  shift 30
	$end  reduce 7
	FORWARD  reduce 7
	LEFT  reduce 7
	HOME  reduce 7
	PRINT  reduce 7
	RIGHT  reduce 7
	BACKWARD  reduce 7
	MAKE  reduce 7
	PRINTS  reduce 7


state 25
	cmd : BACKWARD expr .  (11)
	expr : expr . PLUS term  (14)
	expr : expr . MINUS term  (15)

	PLUS  shift 29
	MINUS  shift 30
	$end  reduce 11
	FORWARD  reduce 11
	LEFT  reduce 11
	HOME  reduce 11
	PRINT  reduce 11
	RIGHT  reduce 11
	BACKWARD  reduce 11
	MAKE  reduce 11
	PRINTS  reduce 11


state 26
	cmd : MAKE NAME . expr  (10)

	LPAR  shift 15
	INT  shift 16
	REF  shift 17
	.  error

	expr  goto 35
	term  goto 19
	factor  goto 20
	final  goto 21


state 27
	cmd_seq : cmd_seq cmd .  (5)

	.  reduce 5


state 28
	expr : expr . PLUS term  (14)
	expr : expr . MINUS term  (15)
	final : LPAR expr . RPAR  (25)

	PLUS  shift 29
	MINUS  shift 30
	RPAR  shift 36
	.  error


state 29
	expr : expr PLUS . term  (14)

	LPAR  shift 15
	INT  shift 16
	REF  shift 17
	.  error

	term  goto 37
	factor  goto 20
	final  goto 21


state 30
	expr : expr MINUS . term  (15)

	LPAR  shift 15
	INT  shift 16
	REF  shift 17
	.  error

	term  goto 38
	factor  goto 20
	final  goto 21


state 31
	term : term TIMES . factor  (17)

	LPAR  shift 15
	INT  shift 16
	REF  shift 17
	.  error

	factor  goto 39
	final  goto 21


state 32
	term : term DIVIDE . factor  (18)

	LPAR  shift 15
	INT  shift 16
	REF  shift 17
	.  error

	factor  goto 40
	final  goto 21


state 33
	term : term MOD . factor  (19)

	LPAR  shift 15
	INT  shift 16
	REF  shift 17
	.  error

	factor  goto 41
	final  goto 21


state 34
	factor : final POWER . factor  (21)

	LPAR  shift 15
	INT  shift 16
	REF  shift 17
	.  error

	factor  goto 42
	final  goto 21


state 35
	cmd : MAKE NAME expr .  (10)
	expr : expr . PLUS term  (14)
	expr : expr . MINUS term  (15)

	PLUS  shift 29
	MINUS  shift 30
	$end  reduce 10
	FORWARD  reduce 10
	LEFT  reduce 10
	HOME  reduce 10
	PRINT  reduce 10
	RIGHT  reduce 10
	BACKWARD  reduce 10
	MAKE  reduce 10
	PRINTS  reduce 10


state 36
	final : LPAR expr RPAR .  (25)

	.  reduce 25


state 37
	expr : expr PLUS term .  (14)
	term : term . TIMES factor  (17)
	term : term . DIVIDE factor  (18)
	term : term . MOD factor  (19)

	TIMES  shift 31
	DIVIDE  shift 32
	MOD  shift 33
	$end  reduce 14
	PLUS  reduce 14
	MINUS  reduce 14
	RPAR  reduce 14
	FORWARD  reduce 14
	LEFT  reduce 14
	HOME  reduce 14
	PRINT  reduce 14
	RIGHT  reduce 14
	BACKWARD  reduce 14
	MAKE  reduce 14
	PRINTS  reduce 14


state 38
	expr : expr MINUS term .  (15)
	term : term . TIMES factor  (17)
	term : term . DIVIDE factor  (18)
	term : term . MOD factor  (19)

	TIMES  shift 31
	DIVIDE  shift 32
	MOD  shift 33
	$end  reduce 15
	PLUS  reduce 15
	MINUS  reduce 15
	RPAR  reduce 15
	FORWARD  reduce 15
	LEFT  reduce 15
	HOME  reduce 15
	PRINT  reduce 15
	RIGHT  reduce 15
	BACKWARD  reduce 15
	MAKE  reduce 15
	PRINTS  reduce 15


state 39
	term : term TIMES factor .  (17)

	.  reduce 17


state 40
	term : term DIVIDE factor .  (18)

	.  reduce 18


state 41
	term : term MOD factor .  (19)

	.  reduce 19


state 42
	factor : final POWER factor .  (21)

	.  reduce 21


23 terminals, 10 nonterminals
27 grammar rules, 43 states
